# EcoPulse-CarbonFootprint

./: .env.example  .gitignore  .pre-commit-config.yaml  ACCESSIBILITY.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTING.md  pyproject.toml  requirements.txt  test.py  vercel.json
.github/workflows/: ci.yml
api/: index.py
backend/: coverage.xml  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py  rate_limit.py
backend/app/models/: carbon.py  insights.py
backend/app/routes/: calculate.py  entries.py  health.py  insights.py
backend/app/services/: bigquery_service.py  firestore_service.py  gemini_service.py  pubsub_service.py
backend/tests/: conftest.py
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/: App.tsx
frontend/src/components/Calculator/: CarbonForm.tsx
frontend/src/components/History/: HistoryTable.tsx
frontend/src/components/Insights/: InsightCard.tsx  InsightsList.tsx
frontend/src/components/shared/: LoadingSpinner.tsx
frontend/src/store/: carbonStore.ts
frontend/src/utils/: formatters.ts
frontend/tests/: InsightsList.test.tsx  ResultsDisplay.test.tsx  api.test.ts  setup.ts
