[project]
name = "EcoPulse-CarbonFootprint"
version = "0.1.0"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "slowapi==0.1.9",
    "httpx==0.27.0",
    "python-multipart==0.0.9",
    "google-generativeai>=0.5.4"
]
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
env = [
  "USE_GEMINI=false",
  "USE_FIRESTORE=false",
  "USE_BIGQUERY=false",
  "USE_PUBSUB=false",
  "PROJECT_ID=satyanarayana-carbonfootprint",
  "PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python"
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 90
